Templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-configmap
  name: hello-world-configmap
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello-world-configmap
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-configmap
  labels:
    app: hello-world-configmap
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-configmap
  template:
    metadata:
      labels:
        app: hello-world-configmap
    spec:
      containers:
      - name: hello-world-configmap
        image: "enabledocker/hello-world-configmap:1.0"
        imagePullPolicy: Always
